using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimacionStrings
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string velocidadY = "velocidadY";
    internal static string saltarTrigger = "saltar";
    internal static string isEnPared = "isEnPared";
    internal static string atacarTrigger = "Atacar";
    internal static string canMove = "canMove";
    internal static string tieneTarget = "tieneTarget";
    internal static string isVivo = "isVivo";
    internal static string dano = "dano";
    internal static string muerte = "muerte";
}
